[package]
name = "slacker"
description = "Slack API wrapper"
keywords = ["slack"]
repository = "https://github.com/allengeorge/slacker"
authors = ["Allen George <allen.george@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
version = "0.1.0"
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
error-chain = "^0.5"
env_logger = "^0.3"
hyper = "^0.9"
log = "^0.3"
serde = "^0.8"
serde_json = "^0.8"
time = "^0.1"
url = "^1.0"

